# rust-nrf24l01-demo

./: Cargo.toml  README.md  hardware.md  sdkconfig.defaults
src/: main.rs  nrfirq.rs
src/nrf24-rs/: .cargo_vcs_info.json  Cargo.toml
src/nrf24-rs/src/: config.rs  nrf24.rs
