[package]
name = "rust-nrf24l01-demo"
version = "0.0.3"
authors = ["MariaBella <lists@jave.fr>"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A demo crate using esp32 and nrf20l01"
repository = "https://github.com/leelists/rust-nrf24l01-demo"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]

experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-svc = "0.41.4"
#esp-idf-hal = { git = "https://github.com/Dominaezzz/esp-idf-hal/", branch = "fix_spi" }
esp-idf-hal = "0.37.4"
embedded-svc = "0.21.3"
embedded-hal = "0.2.7"

[dependencies.nrf24-rs]
git = "https://github.com/leelists/RF24-rs"
features = ["micro-fmt"]

[build-dependencies]
embuild = "0.29"
anyhow = "1"
